Started working on an idea of video proxy
